# apple-health-data-parser

./: .gitignore  pyproject.toml
apple_health_data_parser/: __main__.py  parser.py
